Insure MergeResultWindow::connectActions is only called once

BUG:422820
FIXED-IN:1.10.6